# ical-win32

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  cal_tcl.cpp  cal_tcl.h  collect.h  config.h  configure.ac  custom-checks.ruleset  dateeditor.cpp  dispatch.cpp  dispatch.h  ical-win32.aps  ical-win32.rc  ical-win32.sln  ical-win32.vcxproj  ical-win32.vcxproj.filters  ical.cpp  ical.h  ical_tcl.cpp  item_tcl.cpp  item_tcl.h  license.terms  main.cpp  object.cpp  object.h  ps_header.ps  resource.h  resource1.h  time_tcl.cpp
bitmaps/: dleft.xbm  done.xbm  dright.xbm  ical.xbm  left.xbm  right.xbm  sleft.xbm  sright.xbm  todo.xbm
calendar/: arrays.h  calendar.cpp  calendar.h  calfile.cpp  calfile.h  dateset.cpp  dateset.h  dstest.cpp  item.cpp  item.h  itemmap.h  lexer.cpp  lexer.h  misc.cpp  misc.h  options.cpp  options.h  smallintset.cpp  smallintset.h  statfix.h  uid.cpp  uid.h  version.h
doc/: README  ical.html  interface.html
installer/: installer.vdproj
lib/: tclstub86.lib
tcl/: actions.tcl  dayview.tcl  dg_item.tcl  ical_x.tcl  itemlist.tcl  itemwindow.tcl  link.tcl  ps_header.tcl  startup.tcl  support.tcl  tclIndex
tcl/contrib/: ical.xbm
tcl/tcllib/: dg_autopurgesettings.tcl  dg_date.tcl  dg_duration.tcl  dg_file.tcl  tclIndex
time/: Date.cpp  Date.h  Month.cpp  Month.h  Time.cpp  Time_.h  WeekDay.cpp  WeekDay.h  Year.cpp  Year.h  parse.cpp  parse.h  testparse.cpp
types/: Array.h  arrays.h  basic.h  bitvec.cpp  bitvec.h  hashfuncs.h  htable.h  htable_p.h  intset.cpp  intset.h  ohashmap.h  ohashset.h  tablerep.h  testarray.cpp  testbv.cpp  testhash.cpp  testmap.cpp  testomap.cpp  testoset.cpp
types/.deps/: bitvec.Po  hashfuncs.Po  intset.Po
x64/Debug/: arrays.nativecodeanalysis.sarif  dispatch.nativecodeanalysis.sarif  options.nativecodeanalysis.sarif  smallintset.nativecodeanalysis.sarif  vc143.idb
x64/Debug/ical-win32.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ical-win32.lastbuildstate
